[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-compensation"
version = "0.1.0"
description = "Automatic compensation middleware for LangChain agents with LIFO rollback"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kaviru", email = "hapuarachchikaviru@gmail.com"}
]
keywords = ["langchain", "agents", "compensation", "rollback", "middleware", "saga"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Kavirubc/langchain-compensation"
Repository = "https://github.com/Kavirubc/langchain-compensation"
Documentation = "https://github.com/Kavirubc/langchain-compensation#readme"
Issues = "https://github.com/Kavirubc/langchain-compensation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_compensation"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
